frontend/public/assets/css/style.css
/* ... */
/*===== Teachers Page =====*/
.teachers-page {
  padding-top: 80px;
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .teachers-page {
    padding-top: 20px;
  }
}
@media (max-width: 767px) {
  .teachers-page {
    padding-top: 0px;
  }
}

/*===========================
    18. Courses Sidebar css 
===========================*/
.courses-sidebar .sidebar-title .title {
  font-weight: 500;
  font-size: 24px;
  color: #01228D;
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .courses-sidebar .sidebar-title .title {
    font-size: 20px;
  }
}
@media (max-width: 767px) {
  .courses-sidebar .sidebar-title .title {
    font-size: 20px;
  }
}
.courses-sidebar ul {
  padding-top: 15px;
}
.courses-sidebar ul li {
  padding: 14px 0;
  border-bottom: 1px solid #DBDBDB;
  font-weight: 500;
  font-size: 14px;
  color: #303030;
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .courses-sidebar ul li {
    font-size: 12px;
  }
}
.courses-sidebar ul li:last-child {
  border-bottom: 0;
}
.courses-sidebar ul li strong {
  display: block;
  float: right;
  font-weight: 500;
}

.courses-sidebar-category {
  background-color: #F1F1F1;
  padding: 30px 25px;
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .courses-sidebar-category {
    padding: 25px 20px;
  }
}
.courses-sidebar-category .category-items {
  padding-top: 15px;
}
.courses-sidebar-fee {
  background-color: #F1F1F1;
  padding: 30px 25px;
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .courses-sidebar-fee {
    padding: 25px 20px;
  }
}
.courses-sidebar-fee .category-items {
  padding-top: 15px;
}
.courses-sidebar-banner a {
  display: block;
}
.courses-sidebar-banner a img {
  width: 100%;
}

.courses-sidebar-type {
  background-color: #F1F1F1;
  padding: 30px 25px;
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .courses-sidebar-type {
    padding: 25px 20px;
  }
}
.courses-sidebar-type .category-items {
  padding-top: 15px;
}
.courses-features {
  background-color: #F1F1F1;
  padding: 30px 25px;
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .courses-features {
    padding: 25px 20px;
  }
}
.courses-features .sidebar-btn {
  margin-top: 20px;
}
.courses-features .sidebar-btn .main-btn {
  height: 36px;
  line-height: 36px;
  padding: 0 22px;
  font-size: 14px;
}

/*===========================
    19. Courses Details css 
===========================*/
.courses-details {
  padding-top: 110px;
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .courses-details {
    padding-top: 35px;
  }
}
@media (max-width: 767px) {
  .courses-details {
    padding-top: 15px;
  }
}

.courses-details-content .title {
  font-weight: 700;
  font-size: 46px;
  color: #01228D;
  margin-top: 30px;
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .courses-details-content .title {
    font-size: 36px;
  }
}
@media (max-width: 767px) {
  .courses-details-content .title {
    font-size: 24px;
  }
}
.courses-details-content p {
  margin-top: 20px;
  font-weight: 500;
  font-size: 18px;
  line-height: 36px;
  color: #303030;
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .courses-details-content p {
    font-size: 16px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .courses-details-content p {
    font-size: 16px;
  }
}
@media (max-width: 767px) {
  .courses-details-content p {
    font-size: 14px;
    line-height: 24px;
  }
}
.courses-details-content .sub-title {
  font-weight: 700;
  font-size: 24px;
  color: #01228D;
  position: relative;
  padding-bottom: 10px;
  margin-top: 40px;
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .courses-details-content .sub-title {
    font-size: 20px;
  }
}
@media (max-width: 767px) {
  .courses-details-content .sub-title {
    font-size: 18px;
  }
}
.courses-details-content .sub-title::before {
  position: absolute;
  content: "";
  width: 150px;
  height: 2px;
  background-color: #01228D;
  left: 0;
  bottom: 0;
}
.courses-details-content .courses-details-list li {
  position: relative;
  padding-left: 40px;
  margin-top: 40px;
}
.courses-details-content .courses-details-list li i {
  color: #151515;
  font-size: 24px;
  position: absolute;
  left: 0;
  top: 10px;
}
.courses-details-content .courses-details-list li p {
  margin-top: 0;
}

.courses-details-tab {
  margin-top: 70px;
}
.courses-details-tab .nav li {
  border-left: 1px solid #DBDBDB;
}
@media (max-width: 767px) {
  .courses-details-tab .nav li {
    width: 50%;
    -ms-flex-preferred-size: auto;
    flex-basis: auto;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .courses-details-tab .nav li {
    width: 100%;
    -ms-flex-preferred-size: 0;
    flex-basis: 0;
  }
}
.courses-details-tab .nav li a {
  display: block;
  background-color: #01228D;
  color: #fff;
  text-align: center;
  height: 70px;
  line-height: 70px;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  font-size: 18px;
  font-weight: 600;
}
@media (max-width: 767px) {
  .courses-details-tab .nav li a {
    font-size: 14px;
    height: 45px;
    line-height: 45px;
  }
}
@media only screen and (min-width: 576px) and (max-width: 767px) {
  .courses-details-tab .nav li a {
    height: 55px;
    line-height: 55px;
  }
}
.courses-details-tab .nav li a.active {
  color: #0C8B51;
}
.courses-details-tab .benefit-content {
  padding-top: 20px;
}
.courses-details-tab .benefit-content p {
  margin-top: 20px;
  font-weight: 500;
  font-size: 18px;
  line-height: 36px;
  color: #303030;
}
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .courses-details-tab .benefit-content p {
    font-size: 16px;
  }
}
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .courses-details-tab .benefit-content p {
    font-size: 16px;
  }
}
/* ... */

